--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
+    "spotify-web-api-node": "^5.0.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
